--- a/styles/g3.css
+++ b/styles/g3.css
@@ -7,6 +7,16 @@
   font-style: normal;
 }
 /*shared styles*/
+.btn-primary {
+  background-color: #ff900e;
+  color: white;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
 .display-flex {
   display: flex;
 }
@@ -25,8 +35,13 @@
 /*Header styles*/
 
 /*navbar styles*/
+.brand {
+  font-weight: 700;
+  font-size: 3rem;
+}
 .navbar {
   justify-content: space-between;
+  align-items: center;
 }
 .nav-item {
   list-style-type: none;
@@ -40,4 +55,25 @@
 .banner {
   max-width: 1440px;
   margin: 0 auto;
+}
+/*Banner style */
+.banner-content {
+  max-width: 850px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.banner-title {
+  font-weight: 700;
+  font-size: 4rem;
+}
+.banner-image {
+  width: 100%;
+}
+/*Responsive media */
+@media screen and (max-width: 576px) {
+  .navbar,
+  .nav-link {
+    flex-direction: column;
+  }
 }
