Feture images add

--- a/styles/g3.css
+++ b/styles/g3.css
@@ -31,7 +31,13 @@
 .bg-light {
   background-color: rgba(255, 144, 14, 0.1);
 }
-
+.main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section {
+  margin-top: 130px;
+}
 /*Header styles*/
 
 /*navbar styles*/
@@ -69,6 +75,20 @@
 }
 .banner-image {
   width: 100%;
+}
+/*feature style */
+.teams {
+  align-items: center;
+  justify-content: center;
+}
+.ourfeatures {
+  margin-left: 130px;
+  max-width: 530px;
+}
+.team-image-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
 }
 /*Responsive media */
 @media screen and (max-width: 576px) {
